--- a/web/composer.json
+++ b/web/composer.json
@@ -47,6 +47,7 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
+            "php -r \"copy('.env.example', '.env');\"",
             "php artisan key:generate"
         ],
         "post-install-cmd": [
