--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,15 @@ services:
             - "./web:/var/www/html"
             - "./etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template"
         ports:
-            - "8000:80"
+            - "${NGINX_PORT}:80"
             - "3000:443"
         environment:
             - NGINX_HOST=${NGINX_HOST}
         command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
         restart: always
-        depends_on:
-            - php
-            - mysqldb
+        #depends_on:
+        #    - php
+        #    - mysql
     php:
         image: nanoninja/php-fpm:${PHP_VERSION}
         restart: always
@@ -28,20 +28,20 @@ services:
         volumes:
             - "./web/:/app"
         command: install
-    myadmin:
-        image: phpmyadmin/phpmyadmin
-        container_name: phpmyadmin
-        ports:
-            - "8080:80"
-        environment:
-            - PMA_ARBITRARY=1
-            - PMA_HOST=${MYSQL_HOST}
-        restart: always
-        depends_on:
-            - mysqldb
-    mysqldb:
+#    myadmin:
+#        image: phpmyadmin/phpmyadmin
+#        #container_name: phpmyadmin
+#        ports:
+#            - "8080:80"
+#        environment:
+#            - PMA_ARBITRARY=1
+#            - PMA_HOST=${MYSQL_HOST}
+#        restart: always
+#        depends_on:
+#            - mysql
+    mysql:
         image: mysql:5.7
-        container_name: ${MYSQL_HOST}
+        #container_name: ${MYSQL_HOST}
         restart: always
         env_file:
             - ".env"
